package node;

message InterestPacket {
  repeated int32 interests = 1;
}
